--- a/tpl/law/law-add.html
+++ b/tpl/law/law-add.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <title></title>
-     <link rel="stylesheet" href="/admin/css/app.css">
+    <link rel="stylesheet" href="/admin/css/app.css">
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style>
 
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-primary">
+                <div class="panel panel-default">
                     <div class="panel-heading">
                         <div class="row">
                             <h4 class="col-md-10">添加法律规范文件(带*号 为必填文件/选项)</h4>
@@ -92,16 +92,17 @@
                                 </select>
                                 </div>
                             </div>
+                            <div class="from-group">
+                                <div class="col-md-4 pull-right">
+                                    <input type="submit" class="btn btn-warning" value="取消">
+                                    <input type="submit" class="btn btn-success" value="确定">
+                                </div>
+                            </div>
                         </form>
                     </div>
 
                     <div class="panel-footer">
-                        <div class="row">
-                            <div class="col-md-2 pull-right">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                <button type="button" class="btn btn-primary">确定</button>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
