--- a/tpl/law/law-checkup.html
+++ b/tpl/law/law-checkup.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-primary">
+                <div class="panel panel-default">
                     <div class="panel-heading">
                         <div class="row">
                             <h4 class="col-md-10">法律法规文件审查</h4>
@@ -108,16 +108,17 @@
                                 </select>
                                 </div>
                             </div>
+                            <div class="from-group">
+                                <div class="col-md-4 pull-right">
+                                   <input type="submit" class="btn btn-warning" value="取消">
+                                    <input type="submit" class="btn btn-success" value="确定">
+                                </div>
+                            </div>
                         </form>
                     </div>
 
                     <div class="panel-footer">
-                        <div class="row">
-                            <div class="col-md-2 pull-right">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                <button type="button" class="btn btn-primary">确定</button>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
