update equipment target

--- a/tpl/environment/environ-mon.html
+++ b/tpl/environment/environ-mon.html
@@ -20,15 +20,6 @@
         <div class="panel-heading">
             <div class="row">
                 <h4 class="col-md-2">环保检测数据</h4>
-
-                <div class="col-md-4">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">查询</button>
-                    </span>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="panel-body">
@@ -76,12 +67,15 @@
         <div class="panel-footer">
             <div class="row">
                 <div class="col-md-2 pull-right">
-                <button class="btn btn-primary">
+                 <a href="environ-add.html"><button class="btn btn-primary">
                  添加
                </button>
+               </a>
+               <a href="environ-data.html">
                <button class="btn btn-primary">
                  参数设置
                </button>
+               </a>
                </div>
             </div>
         </div>
