--- a/tpl/monitor/mon-power.html
+++ b/tpl/monitor/mon-power.html
@@ -22,7 +22,7 @@
                 <h4 class="col-md-2">能耗数据</h4>
                 <form class="form-inline" action="">
                     <input type="text" class="form-control">
-                    <input type="submit" class="btn btn-success" value="确定">
+                    <input type="submit" class="btn btn-success" value="查询">
                 </form>
             </div>
         </div>
