--- a/tpl/environment/environ-data.html
+++ b/tpl/environment/environ-data.html
@@ -20,15 +20,6 @@
         <div class="panel-heading">
             <div class="row">
                 <h4 class="col-md-2">环保检测参数设置</h4>
-
-                <div class="col-md-4">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">查询</button>
-                    </span>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="panel-body">
@@ -71,9 +62,14 @@
         </div>
         <div class="panel-footer">
             <div class="row">
-                <button class="btn btn-primary pull-right">
+                <div class="col-md-2 pull-right">
+                    <a href="envdata-add.html">
+                        <button class="btn btn-primary">
                  添加
-            </button>
+                </button>
+                    </a>
+                </div>
+
             </div>
         </div>
     </div>
