--- a/tpl/equipment/metering-manage.html
+++ b/tpl/equipment/metering-manage.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>能耗参数设置</title>
+    <title>计量设备管理</title>
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style>
         tr th,
@@ -19,33 +19,48 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <div class="row">
-                <h4 class="col-md-2">能耗参数</h4>
+                <h4 class="col-md-2">计量设备管理</h4>
             </div>
         </div>
         <div class="panel-body">
             <table class="table table-bordered table-condensed">
-                <thead>
-                    <tr>
-                        <th>能源种类</th>
-                        <th>单位</th>
-                        <th>折标系数</th>
-                        <th>单价</th>
-                        <th>操作</th>
-                        <th>登记人</th>
-                        <th>登记时间</th>
-                    </tr>
-                </thead>
+               <thead>
+                <tr>
+                    <th>序号</th>
+                    <th>设备名称</th>
+                    <th>设备编号</th>
+                    <th>计量种类</th>
+                    <th>计量级别</th>
+                    <th>规格型号</th>
+                    <th>到期日期</th>
+                    <th>安装地点</th>
+                    <th>运行状态</th>
+                    <th>检定日期</th>
+                    <th>检定员</th>
+                    <th>备注</th>
+                    <th colspan="2">编辑</th>
+                </tr>
+            </thead>
                 <tbody>
                     <tr>
-                        <td>&nbsp;</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td>
-                            <a href="mondata-edit.html"><button class="btn btn-success">修改</button></a>
+                            <button class="btn btn-primary">修改</button>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <button class="btn btn-warning">删除</button>
+                         </td>
                     </tr>
                 </tbody>
             </table>
@@ -81,7 +96,9 @@
         </div>
         <div class="panel-footer">
             <div class="row">
-                <a href="mondata-add.html"><button class="btn btn-primary pull-right">添加</button></a>
+                <div class="col-md-1 pull-right">
+                    <a href="metmanage-add.html"><button class="btn btn-primary">添加</button></a>
+                </div>
             </div>
         </div>
     </div>
