--- a/tpl/emergency/emergplan-add.html
+++ b/tpl/emergency/emergplan-add.html
@@ -40,10 +40,10 @@
                                 <label class="col-sm-3 control-label">预案事件类别：</label>
                                 <div class="col-sm-8">
                                     <select class="form-control">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
+                                    <option>事件A</option>
+                                    <option>事件B</option>
+                                    <option>事件C</option>
+                                    <option>事件D</option>
                                 </select>
                                 </div>
                             </div>
