--- a/tpl/pollution/polldata-edit.html
+++ b/tpl/pollution/polldata-edit.html
@@ -67,7 +67,11 @@
                             <div class="form-group">
                                 <label class="col-sm-3 control-label">报警类型：</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control">
+                                   <select class="form-control">
+                                    <option>红色预警</option>   
+                                    <option>黄色预警</option>   
+                                    <option>蓝色预警</option>    
+                                    </select>
                                 </div>
                             </div>
                             <hr>
