--- a/tpl/teach/teach-edit.html
+++ b/tpl/teach/teach-edit.html
@@ -27,11 +27,11 @@
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">姓名：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                                 <label class="col-sm-2 control-label">工号：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                             </div>
 
@@ -47,58 +47,65 @@
                                 </div>
                                 <label class="col-sm-2 control-label">出生年月：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">文化程度：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <select class="form-control">
+                                        <option value="">研究生</option>
+                                        <option value="">本科</option>
+                                        <option value="">大专</option>
+                                        <option value="">高中</option>
+                                        <option value="">初中</option>
+                                        <option value="">小学</option>
+                                    </select>
                                 </div>
                                 <label class="col-sm-2 control-label">联系方式：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">单位：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                                 <label class="col-sm-2 control-label">岗位名称：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">入司时间：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                                 <label class="col-sm-2 control-label">从业时间：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">培训项目：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                                 <label class="col-sm-2 control-label">培训成绩：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">培训有效期：</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="text" class="form-control" >
                                 </div>
                                 <label class="col-sm-2 control-label">培训文件：</label>
                                 <div class="col-sm-4">
-                                    <input type="file" class="form-control" placeholder="">
+                                    <input type="file" class="form-control" >
                                 </div>
                             </div>
                             <div class="form-group">
@@ -109,7 +116,7 @@
                             </div>
                             <hr>
                             <div class="from-group">
-                                <div class="col-md-3 pull-right">
+                                <div class="col-md-5 pull-right">
                                     <input type="reset" class="btn btn-primary" value="重新填写">
                                     <input type="submit" class="btn btn-warning" value="取消">
                                     <input type="submit" class="btn btn-success" value="确定">
