--- a/tpl/equipment/testmet-add.html
+++ b/tpl/equipment/testmet-add.html
@@ -27,12 +27,12 @@
                              <div class="form-group">
                                 <label class="col-sm-3 control-label">检定人：</label>
                                 <div class="col-sm-3">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" readonly>
                                 </div>
 
                                 <label class="col-sm-2 control-label">检定日期：</label>
                                 <div class="col-sm-3">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" readonly>
                                 </div>
                             </div>
                             <hr>
@@ -74,11 +74,7 @@
                             <div class="form-group">
                                 <label class="col-sm-3 control-label">检定设备：</label>
                                 <div class="col-sm-8">
-                                    <select class="form-control">
-                                    <option>设备1</option>
-                                    <option>设备2</option>
-                                    <option>设备3</option>
-                                    <option>设备4</option>
+                                    <input type="text" class="form-control">
                                 </select>
                                 </div>
                             </div>
