--- a/tpl/monitor/mondata-add.1.html
+++ b/tpl/monitor/mondata-add.1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>能源参数增加</title>
+    <title>能源参数添加</title>
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style>
 
@@ -19,23 +19,23 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <div class="row">
-                            <h4 class="col-md-10">能耗参数增加</h4>
+                            <h4 class="col-md-10">能耗参数添加</h4>
                         </div>
                     </div>
-                    <div class="panel-body" ng-controller="monDataEditCtrl">
+                    <div class="panel-body" ng-controller="monDataAddCtrl">
                         <form class="form-horizontal">
                             <div class="form-group">
-                                <label class="col-sm-3 control-label">能耗种类：</label>
+                                <label id="label0" class="col-sm-3 control-label">能耗种类：</label>
                                 <div class="col-sm-8">
-                                    <select class="form-control" ng-model="type1" ng-change="change(type1,types)">
-                                    <option ng-repeat=" t in types" value="{{t.type}}">{{t.type}}</option>
-                                </select>
+                                    <select id="selected0" class="form-control" ng-model="type1" ng-change="change(type1,types)">
+                                    <option ng-repeat=" t in types" ng-value="t.type">{{t.type}}</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-3 control-label">计量单位：</label>
                                 <div class="col-sm-8">
-                                   <input type="text" class="form-control" value="{{symbols}}">
+                                    <input id="input1" type="text" class="form-control" value="{{symbols}}" ng-model="symbols">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -43,7 +43,7 @@
                                 <div class="col-sm-8">
                                     <div class="input-group">
                                         <input type="text" class="form-control">
-                                        <span class="input-group-addon">{{symbols1}}</span>
+                                        <span class="input-group-addon" ng-value="symbols">元/{{symbols}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -52,7 +52,7 @@
                                 <div class="col-sm-8">
                                     <div class="input-group">
                                         <input type="text" class="form-control">
-                                        <span class="input-group-addon">{{symbols}}</span>
+                                        <span class="input-group-addon" ng-value="symbols">{{symbols}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -60,13 +60,16 @@
                                 <label class="col-sm-3 control-label">碳排单价：</label>
                                 <div class="col-sm-8">
                                     <div class="input-group">
-                                        <input type="text" class="form-control">
-                                        <span class="input-group-addon">{{symbols1}}</span>
+                                        <input type="text" class="form-control col-md-3">
+                                        <span class="input-group-addon" ng-value="symbols">元/{{symbols}}</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="from-group">
-                                <div class="col-md-4 pull-right">
+                                <div class="col-md-2 col-md-offset-5">
+                                    <input type="reset" class="btn btn-success" value="重置">
+                                </div>
+                                <div class="col-md-3 pull-right">
                                     <input type="submit" class="btn btn-warning" value="取消">
                                     <input type="submit" class="btn btn-success" value="确定">
                                 </div>
@@ -83,13 +86,13 @@
     <script src="../js/angular.js"></script>
     <script>
         var app = angular.module('myApp',[]);
-        app.controller('monDataEditCtrl',function($scope){
+        app.controller('monDataAddCtrl',function($scope){
             $scope.types = [
         { type: '电量', symbols: '度' ,symbols1:'元/度'},
         { type: '煤', symbols: '吨' ,symbols1:'元/吨' },
         { type: '天然气', symbols: '立方米' ,symbols1:'元/立方米' },
         { type: '汽油', symbols: '升' ,symbols1:'元/升' },
-        { type: '其他'}
+        { type: '其他', symbols: ''}
     ];
     $scope.change = function (type1, types) {
         angular.forEach(types, function (i, j) {
@@ -100,7 +103,18 @@
             }
         })
         }
-        })
+        
+        $("#selected0").change(function(){
+             console.log($("#selected0").val()=="其他")
+              if($("#selected0").val() == "其他"){
+                  $("#label0").text("请输入能耗种类：");
+                  $("#selected0").replaceWith('<input type="text" class="form-control">'); 
+                  $("#input1").val(null);
+                  $scope.symbols = '';
+        }
+        });
+        
+    });
     </script>
 </body>
 
